--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <a href="#">Linkedin</a>
         </div>
     </div>
-    <p>Copyright @2022 By <span>Sayem Momin</span></p>
+    <p>Copyright @2022 By <span>Sayem Ahmed</span></p>
 </section>
 
 <!-- footer section ends -->
